experience section layout issue fixed

--- a/components/experience.module.scss
+++ b/components/experience.module.scss
@@ -1,12 +1,22 @@
 @import "../styles/variables";
+@import "../styles/mixins";
 
 .content {
-  width: 90vw;
+  width: 100%;
   margin: auto;
+
+  .verticalTimeline {
+    max-width: 100%;
+    width: 100%;
+
+    @include respond-to("lg") {
+      width: 95%;
+    }
+  }
 }
 
 .date {
-  color: $on-color-dark-secondary;
+  color: $on-color-light;
 }
 
 .contentContainer {
